tests/models/enum/named/f64/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(expected = "val")]
        value: f64
    },
}
fn main() {}
